@@ -1,20 +1,0 @@
-# # -*- coding: utf-8 -*-
-# #
-# # QUOTAHOLDER configuration
-# #####################
-#
-# # URL of the Quotaholder
-# #
-# #
-# # Set to True to use the Quotaholder service. Otherwise, static
-# # limits are used
-# CYCLADES_USE_QUOTAHOLDER = False
-#
-# CYCLADES_QUOTAHOLDER_URL = "https://accounts.example.synnefo.org/quotaholder/v"
-#
-# # CYCLADES_QUOTAHOLDER_TOKEN = ""
-# # Tune the size of the http pool for the quotaholder client.
-# # It limits the maximum number of quota-querying requests
-# # that Cyclades can serve. Extra requests will be blocked 
-# # until another has completed.
-# CYCLADES_QUOTAHOLDER_POOLSIZE = 200
